syntax = "proto3";

package anma;

option java_package = "com.anma.conflappcore.grpc";
option java_multiple_files = true;
option java_outer_classname = "DataProto";

message PageRequest {
  int64 id = 1;
}

message PagesRequest {
  int32 limit = 1;
}

message PageResponse {
  int64 id = 1;
  string body = 2;
  string title = 3;
  string spaceKey = 4;
  int64 parentId = 5;
  int64 authorId = 6;
}

message PagesResponse {
  map<string, string> pages = 1;
}

message CommentResponse {
  int64 id = 1;
  string body = 2;
  int64 parentId = 3;
}

service PageService {
  rpc GetPage(PageRequest) returns (PageResponse) {}
  rpc GetPages(PagesRequest) returns (stream PageResponse) {}
  rpc GetPagesByAuthor(PageRequest) returns (PageResponse) {}
}